# inference

./: .gitignore  CMakeLists.txt  README.md
include/: inference_engine.h  text_generator.h  tokenizer.h
src/: inference_engine.cpp  main.cpp  text_generator.cpp  tokenizer.cpp
